# expman-rs

./: .gitignore  .maturinignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  Trunk.toml  build.rs  crates.js  flake.nix  help.html  index.html  justfile  pyproject.toml  settings.html  src-files.js
.github/workflows/: build-assets.yml  check-release.yml  ci.yml  docs.yml  frontend.yml  github-release.yml  nix.yml  publish-cargo.yml  publish-pypi.yml  publish.yml  python.yml  rust.yml
crates/expman/: Cargo.toml  README.md
crates/expman-cli/: Cargo.toml  README.md
crates/expman-cli/src/: lib.rs  main.rs
crates/expman-cli/tests/: cli_test.rs
crates/expman-core/: Cargo.toml  README.md
crates/expman-core/docs/: expman-core.md
crates/expman-core/examples/: rust_logging.rs
crates/expman-core/src/: engine.rs  error.rs  lib.rs  models.rs  storage.rs
crates/expman-core/tests/: integration_test.rs
crates/expman-py/: Cargo.toml  README.md
crates/expman-py/src/: lib.rs
crates/expman-server/: Cargo.toml  README.md  build.rs  index.html
crates/expman-server/src/: api.rs  app.rs  jupyter.rs  lib.rs  main.rs  state.rs
crates/expman-server/src/api/: artifacts.rs  experiments.rs  frontend.rs  jupyter_handlers.rs  metrics.rs  mod.rs  runs.rs  stats.rs
crates/expman-server/src/app/: models.rs  utils.rs
crates/expman-server/src/app/components/: interactive.rs
crates/expman-server/src/app/pages/: dashboard.rs  experiment_detail.rs  not_found.rs  settings.rs
crates/expman-server/tests/: api_test.rs
crates/expman/docs/: jupyter_integration.md
crates/expman/experiments/my_rust_exp/: experiment.yaml
crates/expman/experiments/my_rust_exp/20260302_001012/: config.yaml  run.yaml
crates/expman/src/: engine.rs  error.rs  lib.rs  main.rs  models.rs  storage.rs
crates/expman/tests/: integration_test.rs
docs/: expman-cli.md  frontend.md  jupyter_integration.md
examples/python/: basic_training.py  singleton_usage.py  tensorboard_migration.py
examples/rust/: logging.rs  test_rust.rs
expman/: all.html  enum.ExpmanError.html  enum.LogLevel.html  enum.MetricValue.html  enum.RunStatus.html  index.html  sidebar-items.js  struct.ExperimentConfig.html  struct.LoggingEngine.html  struct.MetricRow.html
expman/api/: fn.build_router.html  fn.serve.html  index.html  sidebar-items.js
expman/cli/: enum.Commands.html  fn.cmd_clean.html  fn.cmd_export.html  fn.cmd_import.html  fn.cmd_inspect.html  fn.cmd_list.html  fn.cmd_serve.html  fn.format_duration.html  fn.init_tracing.html  fn.run_cli.html  index.html  sidebar-items.js  struct.Cli.html
expman/core/: index.html  sidebar-items.js
expman/engine/: enum.LogLevel.html  index.html  struct.LoggingEngine.html
expman/error/: enum.ExpmanError.html  index.html  sidebar-items.js  type.Result.html
expman/jupyter_integration/: index.html
expman/models/: enum.MetricValue.html  enum.RunStatus.html  index.html  sidebar-items.js  struct.ExperimentConfig.html  struct.ExperimentMetadata.html  struct.MetricRow.html  struct.RunMetadata.html
expman/storage/: fn.append_metrics.html  fn.ensure_dir.html  fn.list_artifacts.html  fn.list_experiments.html  fn.list_runs.html  fn.load_experiment_metadata.html  fn.load_run_metadata.html  fn.load_yaml.html  fn.load_yaml_value.html  fn.read_latest_scalar_metrics.html  fn.read_metrics.html  fn.read_metrics_since.html  fn.save_experiment_metadata.html  fn.save_run_metadata.html  fn.save_yaml.html  index.html  sidebar-items.js  struct.ArtifactInfo.html
expman/wrappers/: index.html
expman_core/: all.html  index.html  sidebar-items.js
expman_core/engine/: enum.LogLevel.html  index.html  sidebar-items.js  struct.LoggingEngine.html
expman_core/error/: enum.ExpmanError.html  index.html  type.Result.html
expman_core/jupyter_integration/: index.html
expman_core/models/: enum.MetricValue.html  enum.RunStatus.html  index.html  struct.ExperimentConfig.html  struct.ExperimentMetadata.html  struct.MetricRow.html  struct.RunMetadata.html
expman_core/storage/: fn.append_metrics.html  fn.ensure_dir.html  fn.list_artifacts.html  fn.list_experiments.html  fn.list_runs.html  fn.load_experiment_metadata.html  fn.load_run_metadata.html  fn.load_yaml.html  (+9 more)
expman_server/: all.html  fn.build_router.html  fn.serve.html  index.html  sidebar-items.js
frontend/: Cargo.toml  all.html  fn.App.html  fn.ArtifactView.html  fn.ConsoleView.html  fn.Dashboard.html  fn.ExperimentDetail.html  fn.Experiments.html  fn.InteractiveView.html  fn.LineChart.html  fn.MetricsView.html  fn.NotFound.html  fn.RunsTableView.html  fn.SettingsPage.html  fn.StatCard.html  fn.TabularPreview.html  fn.check_jupyter_available.html  fn.fetch_artifact_content.html  fn.fetch_artifacts.html  fn.fetch_experiments.html  fn.fetch_global_stats.html  fn.fetch_jupyter_status.html  fn.fetch_run_metadata.html  fn.fetch_runs.html  fn.format_date.html  fn.main.html  fn.new_plot.html  fn.start_jupyter.html  fn.stop_jupyter.html  fn.update_experiment_metadata.html  fn.update_run_metadata.html  index.html  sidebar-items.js  struct.AppProps.html  struct.Artifact.html  struct.ArtifactViewProps.html  struct.ConsoleViewProps.html  struct.DashboardProps.html  struct.Experiment.html  struct.ExperimentDetailProps.html  (+15 more)
frontend/src/: lib.rs  main.rs
search.index/: 0056244e2134.js  00591441c695.js  009c928aafc1.js  00bc7f6bc42c.js  0128bc537e34.js  01aa5420f71e.js  038bc97aa1ca.js  0394c234457d.js  03fa5d4f66c7.js  04ad79a7bb72.js  05d1d6d497a5.js  071e23bf2eb8.js  07cb0475580d.js  0834343dfff0.js  08e63372ee2f.js  09820e24708c.js  0bb1844460a9.js  0bf7628b9a90.js  0cd765412fef.js  0db43a81d016.js  0e870e1134c7.js  135416949183.js  13a2222d3c91.js  15be5c8e683e.js  16191e6b859a.js  1755f9cad952.js  1781c9b94ade.js  17cde5e552cb.js  18d2ad546714.js  18fc27bd91dc.js  19b35b62b5fb.js  1a20f4ddf165.js  1e9165329700.js  1f4bc18e9663.js  201da253f4e5.js  20b250d1bd1c.js  218500f8ca60.js  21bf41ff71f4.js  223ec4857ec2.js  22771cdb4e48.js  (+99 more)
src/: lib.rs  main.rs
tests/: api_test.rs  cli_test.rs  integration_test.rs
(+175 files in other folders)
