[workspace]
resolver = "2"
members = [
    "crates/expman",
    "crates/expman-server",
    "crates/expman-cli",
    "crates/expman-py",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Lokesh Mohanty <lokesh1197@gmail.com>"]
license = "MIT"
description = "High-performance experiment manager with Rust backend"
repository = "https://github.com/lokeshmohanty/expman-rs"
homepage = "https://lokeshmohanty.github.io/expman-rs/"
documentation = "https://lokeshmohanty.github.io/expman-rs/"
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Web
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = { version = "8", features = ["include-exclude"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Arrow / Parquet
arrow = { version = "58", features = ["ipc"] }
parquet = { version = "58", features = ["arrow"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "color"] }
mime_guess = "2"
comfy-table = "7"
indicatif = "0.18"

# Python bindings
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
