[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
console_error_panic_hook = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
gloo-net = "0.6"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlTextAreaElement", "Window", "Storage"] }
lucide-leptos = "0.1"
stylist = "0.13"
chrono = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
log = "0.4"
console_log = "1.0"
plotly = "0.14.1"
serde-wasm-bindgen = "0.6.5"
