[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "frontend"
path = "src/lib.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
console_error_panic_hook = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
gloo-net = "0.6"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlTextAreaElement", "Window", "Storage", "RequestMode", "RequestInit"] }
lucide-leptos = { version = "2.576", features = ["all-icons"] }
stylist = "0.14"
chrono = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
log = "0.4"
console_log = "1.0"
plotly = "0.14.1"
serde-wasm-bindgen = "0.6.5"
gloo-timers = { version = "0.3", features = ["futures"] }
