[package]
name = "expman-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "expman"
path = "src/main.rs"

[dependencies]
expman-core = { path = "../expman-core" }
expman-server = { path = "../expman-server" }
tokio = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
