[package]
name = "expman-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance experiment manager with Rust backend (CLI and library)"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[lib]
name = "expman_cli"
path = "src/lib.rs"

[[bin]]
name = "exp"
path = "src/main.rs"

[dependencies]
expman = { path = "../expman", version = "0.2.6" }
expman-server = { path = "../expman-server", version = "0.2.6" }
tokio = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
