[package]
name = "expman-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for expman"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[lib]
name = "expman"
crate-type = ["cdylib"]
doc = false

[dependencies]
expman-core = { path = "../expman-core", version = "0.1.1" }
pyo3 = { workspace = true, features = ["extension-module"] }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }

[features]
default = ["pyo3/extension-module"]
