[package]
name = "expman-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for expman"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[lib]
name = "expman_py"
crate-type = ["cdylib"]
# doc enabled for library

[dependencies]
expman = { path = "../expman", version = "0.2.7" }
pyo3 = { workspace = true, features = ["extension-module"] }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }

[features]
default = ["pyo3/extension-module"]
