[package]
name = "expman-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for expman"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[lib]
name = "expman_py"
crate-type = ["cdylib"]

[[bin]]
name = "exp"
path = "../expman-cli/src/main.rs"
doc = false

[dependencies]
expman = { path = "../expman", version = "0.3.0" }
expman-cli = { path = "../expman-cli", version = "0.3.0" }
expman-server = { path = "../expman-server", version = "0.3.0" }
pyo3 = { workspace = true, features = ["extension-module"] }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }

[features]
default = ["pyo3/extension-module"]
