[package]
name = "expman-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Web server and dashboard for expman"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
expman-core = { path = "../expman-core", version = "0.1.2" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
mime_guess = { workspace = true }
