[package]
name = "expman-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Web server and dashboard for expman"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[lib]
name = "expman_server"
path = "src/lib.rs"

[dependencies]
expman = { path = "../expman", version = "0.2.7" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_yaml = "0.9"
