[package]
name = "expman-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Web server and dashboard for expman"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[lib]
name = "expman_server"
path = "src/lib.rs"

[[bin]]
name = "expman-server"
path = "src/main.rs"

# ── Native-only dependencies (axum server) ────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
expman = { path = "../expman", version = "0.3.3" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { workspace = true }
futures-util = "0.3"
axum = { version = "0.8", features = ["macros"] }
tower-http = { workspace = true }
rust-embed = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
mime_guess = { workspace = true }

# ── WASM-only dependencies (Leptos frontend) ──────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
console_error_panic_hook = "0.1"
gloo-net = "0.6"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlTextAreaElement", "HtmlAnchorElement", "Window", "Storage", "RequestMode", "RequestInit", "EventSource", "MessageEvent", "Document", "Blob", "BlobPropertyBag", "Url", "ResizeObserver", "MouseEvent", "WheelEvent"] }
lucide-leptos = { version = "2.576", features = ["all-icons"] }
stylist = "0.14"
wasm-bindgen = "0.2"
js-sys = "0.3"
log = "0.4"
console_log = "1.0"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
plotters-canvas = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

# ── Shared dependencies ──────────────────────────────────────────────────────
[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_yaml = "0.9"
